--- a/02_13/02_13-practica_grid_flex.css
+++ b/02_13/02_13-practica_grid_flex.css
@@ -1,40 +1,53 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin: 0 20px;
+  margin: 20px;
   gap: 20px;
 }
 
 .grid-item {
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  border: 1px solid rgb(0, 0, 0);
   padding: 20px;
+}
+
+.grid-container2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 20px;
+  gap: 20px;
 }
 
 .text-transform {
   text-transform: uppercase;
 }
 
-.item1 {
+.item1 { /* h1 */
   grid-column: 1 / 4;
 }
 
-.item2 {
+.item2 { /* aside */
 	grid-column: 1 / 2;
 	grid-row: 1 / span 2;
 }
 
-.item3 {
+.item3 { /* section */
 	grid-column: 2 / 4;
 }
 
-.item4 {
+.item4 { /* div widget 1*/
 	grid-column: 2 / 3;
 }
 
-.item5 {
+.item5 { /* div widget 2*/
 	grid-column: 3 / 4;
 }
 
-.item6 {
+.item6 { /* footer */
   grid-column: 1 / 4;
 }
